Fix alignment

--- a/src/GameBoard/GameBoard.css
+++ b/src/GameBoard/GameBoard.css
@@ -1,3 +1,7 @@
 .images-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 4rem;
+    width: 100%;
 }
